--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -1,6 +1,6 @@
 <div class="playing-grid row">
   <div
-    class="card-container col-4 col-sm-3 col-md-2"
+    class="card-container col-4 col-md-2"
     ng-repeat="sprite in cardCtrl.getCards() track by $index"
   >
     <div class="card">
