--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -3,12 +3,12 @@
 }
 
 body {
-  background-color: #81d481;
+  background-color: #ddfff8;
 }
 
 #title {
   margin-top: 5vh;
-  color: #0b570b;
+  color: #002215;
 }
 
 .playing-grid {
@@ -16,18 +16,31 @@ body {
 }
 
 .card-container {
-  height: 25vh;
-  margin: 1vh auto;
+  height: 20vh;
+  margin: 1% auto;
+}
+
+.button-tile {
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+  background-color: transparent;
+  border: transparent;
 }
 
 .card {
+  background-color: #cefff5;
   height: 100%;
   justify-content: center;
   align-items: center;
-  border: 2px solid #8d0000;
+  border: 3px solid #005835;
 }
 
 .card-body {
   display: flex;
   align-items: center;
+}
+
+.card-back {
+  background-color: #00a060;
 }
