--- a/src/templates/card.html
+++ b/src/templates/card.html
@@ -1,4 +1,4 @@
-<div class="playing-grid row">
+<div class="row col-10">
   <div
     class="card-container col-4 col-md-2"
     ng-repeat="sprite in cardCtrl.getCards() track by $index"
