--- a/src/templates/start.html
+++ b/src/templates/start.html
@@ -1,8 +1,8 @@
-<section class="container">
-  <div class="row">
+<section>
+  <div>
     <h1 id="title" class="text-center">Pokematch<br />Card Game</h1>
 
-    <div class="start-container">
+    <div class="start-button">
       <button
         id="start-easy"
         class="start btn btn-primary col-2"
@@ -13,7 +13,7 @@
       </button>
     </div>
 
-    <div class="start-container">
+    <div class="start-button">
       <button
         id="start-med"
         class="start btn btn-warning col-2"
@@ -24,7 +24,7 @@
       </button>
     </div>
 
-    <div class="start-container">
+    <div class="start-button">
       <button
         id="start-hard"
         class="start btn btn-danger col-2"
