--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -1,4 +1,4 @@
-<section class="game-grid container">
-  <timer></timer>
+<section class="row">
+  <timer id="timer"></timer>
   <card></card>
 </section>
