--- a/src/templates/start.html
+++ b/src/templates/start.html
@@ -2,10 +2,10 @@
   <div>
     <h1 id="title" class="text-center">Pokematch<br />Card Game</h1>
 
-    <div class="start-button">
+    <div class="start">
       <button
         id="start-easy"
-        class="start btn btn-primary col-2"
+        class="start-button btn btn-success col-2"
         ui-sref="play"
         ng-click="gameCtrl.setDifficulty('easy')"
       >
@@ -13,10 +13,10 @@
       </button>
     </div>
 
-    <div class="start-button">
+    <div class="start">
       <button
         id="start-med"
-        class="start btn btn-warning col-2"
+        class="start-button btn btn-warning col-2"
         ui-sref="play"
         ng-click="gameCtrl.setDifficulty('med')"
       >
@@ -24,10 +24,10 @@
       </button>
     </div>
 
-    <div class="start-button">
+    <div class="start">
       <button
         id="start-hard"
-        class="start btn btn-danger col-2"
+        class="start-button btn btn-danger col-2"
         ui-sref="play"
         ng-click="gameCtrl.setDifficulty('hard')"
       >
