Fix tiles horizontally expanding when clicked

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -1,4 +1,6 @@
-<section class="row">
-  <timer id="timer"></timer>
-  <card></card>
+<section class="container">
+  <div class="row">
+    <timer id="timer"></timer>
+    <card></card>
+  </div>
 </section>
