--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -14,6 +14,7 @@ body {
   justify-content: center;
 }
 
+/* TITLE SCREEN */
 #title {
   font-family: 'Fascinate', cursive;
 }
@@ -25,7 +26,30 @@ body {
 }
 
 .start-button {
+  min-width: 100px;
+}
+
+/* GAME OVER OVERLAY */
+#overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed; /* Sit on top of the page content */
   width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+}
+
+#game-over {
+  color: #ddfff8;
+  text-shadow: 2px 2px black, -2px -2px black;
+  height: 50%;
+}
+
+#restart-game {
+  max-height: 60px;
+  height: 100%;
   min-width: 100px;
 }
 
