Replace flip animation with show/hide instead. Reduce hide delay

--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -1,5 +1,6 @@
 * {
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color: #002215;
 }
 
@@ -85,11 +86,11 @@ body {
 .card {
   background-color: #a8ecd1;
   height: 100%;
+  min-height: 69px;
   justify-content: center;
   align-items: center;
   border: 3px solid #005835;
-  transition: all .4s linear;
-  transform-style: preserve-3d;
+  transition: all 0.2s linear;
 }
 
 .card-body {
@@ -98,6 +99,6 @@ body {
 }
 
 .card-back {
-  transform: rotateY(180deg);
   background-color: #00a060;
+  transition: all 0.1s linear;
 }
