Fix timer bug not running on restart. Add test insta-win button

--- a/src/templates/game.html
+++ b/src/templates/game.html
@@ -2,5 +2,12 @@
   <div class="row">
     <timer id="timer"></timer>
     <card></card>
+    <button
+      class="test-button btn btn-success col-2"
+      ng-if="gameCtrl.testModeEnabled"
+      ng-click="gameCtrl.solve()"
+    >
+      Instant win
+    </button>
   </div>
 </section>
