--- a/src/templates/start.html
+++ b/src/templates/start.html
@@ -7,7 +7,7 @@
         id="start-easy"
         class="start-button btn btn-success col-2"
         ui-sref="play"
-        ng-click="gameCtrl.setDifficulty('easy')"
+        ng-click="gameCtrl.start('easy')"
       >
         Easy
       </button>
@@ -18,7 +18,7 @@
         id="start-med"
         class="start-button btn btn-warning col-2"
         ui-sref="play"
-        ng-click="gameCtrl.setDifficulty('med')"
+        ng-click="gameCtrl.start('med')"
       >
         Medium
       </button>
@@ -29,7 +29,7 @@
         id="start-hard"
         class="start-button btn btn-danger col-2"
         ui-sref="play"
-        ng-click="gameCtrl.setDifficulty('hard')"
+        ng-click="gameCtrl.start('hard')"
       >
         Hard
       </button>
